# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml
brain_games/: cli.py  consts.py  game.py  games.py  interface.py
brain_games/games/: calc_game.py  common_engine.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games_main.py  brain_gcd.py  brain_prime.py  brain_progression.py
